--- a/index.html
+++ b/index.html
@@ -5,8 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tanvir portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section>
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1> <span class="tanvir">Tanvir's</span> world</h1>
+            <h3>Tanvir Hasan Prodhan</h3>
+            <h2>web developer</h2>
+            <p>I am a Student in class 10.The Name of my school is Daudkandi Cambrian School.I Have lots of friend in my school.daudkandi is importent place in cumilla distric.this is the frist area of distric cumilla.by the way you know it is my frist website in internet.I am learnt a complete web developer coures.Pray for me.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/">facebook ID</a>
+            <a href=""></a>
+        </div>
+    <div class="half-width"><img src="my-bg.png" alt="loading....."></div>
+    </section>
     
 </body>
 </html>
