--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
         </div>
     <div class="half-width"><img src="my-bg.png" alt="loading....."></div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+        <img src="my-bg2 (1).png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a Web Developer</h2>
+            <p>I aready learned the basic HTML and CSS.I can build any simple website.I can evan teach my greand ma how to make simple website.my goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="">go</a>
+        </div>
+    </section>
     
 </body>
 </html>
