--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner section">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1> <span class="tanvir">Tanvir's</span> world</h1>
@@ -24,7 +24,7 @@
         </div>
     <div class="half-width"><img src="my-bg.png" alt="loading....."></div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big section">
         <div class="half-width">
         <img src="my-bg2 (1).png" alt="">
         </div>
@@ -35,6 +35,24 @@
             <a class="link-button" target="_blank" href="">go</a>
         </div>
     </section>
+    <section class="expariens-area">
+        <h1>Expariences</h1>
+       <div class="section">
+        <div  id="finish" class="expariens-item">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="tanvir">2021-Present | Pro Level Developer</h3>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div id="baby" class="expariens-item">
+            <h2>Baby Web Developer</h2>
+            <h3 class="tanvir">2020-2021 | Programming Hero Learner</h3>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+       </div>
+    </section>
     
 </body>
+<footer>
+    <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+</footer>
 </html>
